--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "p-limit": "^6.2.0",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.30.0",
     "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/node": "^22.15.30",
+    "@types/node-fetch": "^2.6.12",
+    "@types/p-limit": "^2.2.0",
+    "@types/qrcode-terminal": "^0.12.2",
     "@types/ws": "^8.5.4",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
