--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "npx tsc && node dist/index.js",
     "build:start": "npm run build && npm run start",
     "backtest": "ts-node src/backtest/oneYearBacktest.ts",
+    "multiTimeframeBacktest": "ts-node src/backtest/multiTimeframeBacktest.ts",
     "analyze": "ts-node src/scripts/analyzeTrades.ts",
-    "reset": "ts-node src/scripts/reset.ts"
+    "reset": "ts-node src/scripts/reset.ts",
+    "start:api": "ts-node src/server.ts"
   },
   "dependencies": {
     "@binance/futures-connector": "^0.1.7",
@@ -16,19 +18,23 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "p-limit": "^6.2.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.30.0",
-    "ws": "^8.14.2"
+    "ws": "^8.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.15.30",
     "@types/node-fetch": "^2.6.12",
     "@types/p-limit": "^2.2.0",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/ws": "^8.5.4",
+    "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
   }
 }
