--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,31 +23,33 @@ jobs:
 
       - name: Envia código para a VPS (apaga tudo com --delete)
         run: |
-          rsync -avz --delete --exclude=".git" ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:${{ secrets.VPS_PATH }}
+          rsync -avz --delete --exclude=".git*" ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:${{ secrets.VPS_PATH }}/
 
       - name: Recria o .env com todas as variáveis
         run: |
-          ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-            echo 'TESTNET=${{ secrets.TESTNET }}' > ${{ secrets.VPS_PATH }}/.env &&
-            echo 'BINANCE_API_KEY=${{ secrets.BINANCE_API_KEY }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'BINANCE_API_SECRET=${{ secrets.BINANCE_API_SECRET }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'WHATSAPP_TARGET=${{ secrets.WHATSAPP_TARGET }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'NUM_SYMBOLS=${{ secrets.NUM_SYMBOLS }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'COLLECTION_TIME_MINUTES=${{ secrets.COLLECTION_TIME_MINUTES }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'SINGLE_TIMEFRAME=${{ secrets.SINGLE_TIMEFRAME }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'TIMEFRAMES=${{ secrets.TIMEFRAMES }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'TP_ATR_MULT=${{ secrets.TP_ATR_MULT }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'SL_ATR_MULT=${{ secrets.SL_ATR_MULT }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'LEVERAGE=${{ secrets.LEVERAGE }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'ENTRY_AMOUNT=${{ secrets.ENTRY_AMOUNT }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'ATR_PERIOD=${{ secrets.ATR_PERIOD }}' >> ${{ secrets.VPS_PATH }}/.env &&
-            echo 'AUTO_START_BOT=${{ secrets.AUTO_START_BOT }}' >> ${{ secrets.VPS_PATH }}/.env
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+            cat <<EOF > ${{ secrets.VPS_PATH }}/.env
+          TESTNET=${{ secrets.TESTNET }}
+          BINANCE_API_KEY=${{ secrets.BINANCE_API_KEY }}
+          BINANCE_API_SECRET=${{ secrets.BINANCE_API_SECRET }}
+          WHATSAPP_TARGET=${{ secrets.WHATSAPP_TARGET }}
+          NUM_SYMBOLS=${{ secrets.NUM_SYMBOLS }}
+          COLLECTION_TIME_MINUTES=${{ secrets.COLLECTION_TIME_MINUTES }}
+          SINGLE_TIMEFRAME=${{ secrets.SINGLE_TIMEFRAME }}
+          TIMEFRAMES=${{ secrets.TIMEFRAMES }}
+          TP_ATR_MULT=${{ secrets.TP_ATR_MULT }}
+          SL_ATR_MULT=${{ secrets.SL_ATR_MULT }}
+          LEVERAGE=${{ secrets.LEVERAGE }}
+          ENTRY_AMOUNT=${{ secrets.ENTRY_AMOUNT }}
+          ATR_PERIOD=${{ secrets.ATR_PERIOD }}
+          AUTO_START_BOT=${{ secrets.AUTO_START_BOT }}
+          EOF
           "
 
       - name: Instala dependências e executa o bot
         run: |
-          ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
             cd ${{ secrets.VPS_PATH }} &&
             npm install &&
-            pm2 restart robot-trader
+            pm2 restart robot-trader || pm2 start robot-trader --name robot-trader
           "
