--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,35 +21,21 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Envia código para a VPS (usando SCP)
+      - name: Envia código para a VPS (apaga tudo com --delete)
         run: |
-          scp -r -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:${{ secrets.VPS_PATH }}
+          rsync -avz --delete --exclude=".git" ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:${{ secrets.VPS_PATH }}
 
-      - name: Recria o .env com todas as variáveis
+      - name: Recria o .env com os secrets da Binance
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-            cat <<EOF > ${{ secrets.VPS_PATH }}/.env
-          TESTNET=${{ secrets.TESTNET }}
-          BINANCE_API_KEY=${{ secrets.BINANCE_API_KEY }}
-          BINANCE_API_SECRET=${{ secrets.BINANCE_API_SECRET }}
-          WHATSAPP_TARGET=${{ secrets.WHATSAPP_TARGET }}
-          NUM_SYMBOLS=${{ secrets.NUM_SYMBOLS }}
-          COLLECTION_TIME_MINUTES=${{ secrets.COLLECTION_TIME_MINUTES }}
-          SINGLE_TIMEFRAME=${{ secrets.SINGLE_TIMEFRAME }}
-          TIMEFRAMES=${{ secrets.TIMEFRAMES }}
-          TP_ATR_MULT=${{ secrets.TP_ATR_MULT }}
-          SL_ATR_MULT=${{ secrets.SL_ATR_MULT }}
-          LEVERAGE=${{ secrets.LEVERAGE }}
-          ENTRY_AMOUNT=${{ secrets.ENTRY_AMOUNT }}
-          ATR_PERIOD=${{ secrets.ATR_PERIOD }}
-          AUTO_START_BOT=${{ secrets.AUTO_START_BOT }}
-          EOF
+          ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+            echo 'BINANCE_API_KEY=${{ secrets.BINANCE_API_KEY }}' > ${{ secrets.VPS_PATH }}/.env &&
+            echo 'BINANCE_API_SECRET=${{ secrets.BINANCE_API_SECRET }}' >> ${{ secrets.VPS_PATH }}/.env
           "
 
-      - name: Instala dependências e executa o bot
+      - name: Instala dependências e executa/reinicia o bot
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+          ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
             cd ${{ secrets.VPS_PATH }} &&
             npm install &&
-            pm2 restart robot-trader || pm2 start robot-trader --name robot-trader
+            pm2 start app.js --name robot-trader || pm2 restart robot-trader
           "
